commit modify